# chezmoi

./: .gitignore  Makefile  go.mod  go.sum  pyproject.toml
.github/workflows/: govulncheck.yml  installer.yml  lock.yml  main.yml
assets/chezmoi.io/: mkdocs.yml  requirements.txt
assets/chezmoi.io/docs/: hooks.py  shortcodes.py
assets/chezmoi.io/docs/reference/templates/functions/: findExecutable.md
